trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
/* ... */
.qViewTitleText {
	color:#FFFFFF;
	font-size:1.1em;
	letter-spacing:0.05em;
	overflow:auto;
	width:auto;
	font-weight: normal;
}
.qViewTitle {
	padding-left:115px;
	display:inline;
}
.qViewPresence {
	display:inline;
}
.qViewMain {
}
.qViewLeft {
	margin: -15px 10px 10px;
	width: 100px;
}
.qViewRight {
	margin:5px 0 0;
}
.qViewPhoto {
	position: relative;
	margin-bottom: 10px;
}
.qViewActions {
}
.qViewPhoto img {
	width: 100px;
}
.qViewPhoto_No {
	margin-left:25px;
	margin-top:25px;
	margin-bottom:10px;
}
.qViewPhotoHeight_No {
	height:50px;
}
.qViewPhotoDisabled {
	margin-bottom: 20px;
}
.qViewStatus {
	padding-bottom: 10px;
}
.qViewStatusInline {
	display:inline;
}
.qViewStatus-anchor{
	color:#1C5894 !important;
	margin-left: 5px;
}
.qViewFooter {
}
.qViewClose {
	position:absolute;
	right:4px;
	top:4px;
}
.qViewInfoTable {
	margin-bottom: 35px;
	margin-left: 5px;
}
.qView-a {
	color: #353838 !important;
	font-size:10px;
	font-style:normal;
	font-weight:normal;
	cursor: pointer;
	display:block;
}
.qView-a:hover {
	color: #135c8f;
}
.qView-action  {
	-moz-border-radius:15px;
	-webkit-border-radius: 15px;
	background:url("images/putty_blend2.png") repeat-x scroll center bottom #FFFFFF;
	border:1px solid #c4c4c4;
	font-size:11px;
	margin-top:5px;
	padding:2px 5px;
	text-align:center;
	position: relative;
}
.qView-action2 {
	color: #135c8f;
	background: url("images/teal_slice.png") repeat-x center;
	border:1px solid #91daf2;
}
.qView-action-following  {
	-moz-border-radius:15px;
	-webkit-border-radius: 15px;
	background:url("images/putty_blend4.png") repeat-x scroll center bottom #FFFFFF;
	border:1px solid #b8b8b8;
	color:#353838;
	font-size:11px;
	margin-top:5px;
	padding:2px 5px;
	text-align:center;
}
.qView-action-following:hover {
	background: url("images/teal_slice.png") repeat-x center;
	border:1px solid #91daf2;
	color:#135c8f;
}
.qView-action-img {
	background:url("images/trans50_black_arrowleft.png");
	margin-right: 5px;
	position: absolute;
	top: 9px;
	left: 15px;
}
.presenceImgA {
	cursor: pointer;
	padding-right: 5px;
	padding-left: 5px;
}
.qView-follow-label {
	display: inline;
}
.qView-follow-img {
	vertical-align: middle;
	padding-right: 1px;
}
.qView-arrow {
left:-25px;
position:absolute;
top:100px;
}

.gwtUI_nowrap
{
	white-space: nowrap;	
}
.gwtUI_vmiddle
{
	vertical-align: middle;
}

.gwtUI_ss_forceHorizontalScroller
{
	overflow-x: auto !important;
}
.gwtUI_ss_forceBothScrollers
{
	overflow: auto !important;
}
.gwtUI_ss_forceVerticalScroller
{
	overflow-y: auto !important;
}

.gwtUI_ss_brightest   {opacity: 1.0;}
.gwtUI_ss_brightestIE {filter: alpha(opacity=100);}
.gwtUI_ss_brighter    {opacity: 0.8;}
.gwtUI_ss_brighterIE  {filter: alpha(opacity=80);}
.gwtUI_ss_bright      {opacity: 7.0;}
.gwtUI_ss_brightIE    {filter: alpha(opacity=70);}
.gwtUI_ss_dim         {opacity: 0.6;}
.gwtUI_ss_dimIE       {filter: alpha(opacity=60);}
.gwtUI_ss_very_dim    {opacity: 0.4;}
.gwtUI_ss_very_dimIE  {filter: alpha(opacity=40);}

/* Next and Previous Page buttons */

#viewNextPageOfResults, #viewPreviousPageOfResults, .viewNextDisabledImg, .viewPreviousDisabledImg {
	vertical-align: middle;
	}

.popupMenu
{
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	background-color: #3A3E40;
	position: absolute;
	left: 0px;
	top: 0px;
	z-index: 400;
}

.popupMenuTopPanel, .popupMenuBottomPanel
{
	padding-top: 5px;
}

.popupMenuItem
{
	color: #FFFFFF;
	cursor: pointer;
	line-height: 1.1em; 
	padding: 0.4em 0.75em 0.5em; 
	white-space: nowrap;
}

.popupMenuItem_Hover
{
	background: none repeat scroll 0 0 #505354;
	color: #81B2BD !important;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}

/* Styles for the task disposition dialog. */
.taskDispositionDlg
{
}
.taskDispositionDlg_Radio
{
	margin-left: 5px;
}
.taskDispositionDlg_Grid
{
	margin-top: 8px;
}
.taskDispositionDlg_Label
{
	color: #414648; /* dark grey */
	line-height: 1.1em; 
	margin-right: 5px;
	padding: 0.2em 0.5em 0.3em; 
}
.taskDispositionDlg_Hint
{
	width: 400px;
	margin-top: 5px;
}
.taskDispositionDlg_TimePicker
{
	margin-left: 5px;
	margin-right: 3px;
}
.taskDispositionDlg_DateTimeTable td
{
	vertical-align: middle !important;
}

/* Styles for the task due date dialog. */
.taskDueDateDlg
{
}
.taskDueDateDlg_Table
{
	margin-top: 8px;
}
.taskDueDateDlg_Label
{
	color: #414648; /* dark grey */
	line-height: 1.1em; 
	margin-right: 5px;
	padding: 0.2em 0.5em 0.3em; 
}
.taskDueDateDlg_TaskTitle
{
	width: 400px;
	margin-top: 5px;
}

/* Start:  GWT Task Folder Listing styles. */
.gwtTaskFilter_div
{
	display: block;
	position: absolute;
	background-color: white;
	top: 5px;
	right: 5px;
	padding: 0px 5px 1px 5px;
	border: 1px solid #CCC;
	-moz-border-radius: 15px;
	-webkit-border-radius: 15px;
}
.gwtTaskFilter_input
{
	font-size: 11px !important;
	width: 130px;
	border: none !important;
	background-color: transparent !important;
	padding: 1px 0 !important;
}
.gwtTaskFilter_inputBlur
{
	color: graytext !important;
}
.gwtTaskFilter_inputFocus
{
	color: #353838 !important;
}
.gwtTaskFilter_toolbar
{
	position: relative;
}
.gwtTaskTools
{
	background-color:#cccccc;
	display: block;
	padding:  3px 3px 3px 12px;
	font-family: Arial,Helvetica,sans-serif;
	font-size: 1.25em;
	position: relative; 
	white-space: nowrap;
	-moz-border-radius-topleft: 5px;
	-moz-border-radius-topright: 5px;
	-webkit-border-top-left-radius: 5px;
	-webkit-border-top-right-radius: 5px;
}
.gwtTaskTools_Span
{
	padding-right: 10px;
}
.gwtTaskTools_HintSpan
{
	padding-left:  10px;
	font-size:  .75em;
	color: #666;  /* gray */
}
.gwtTaskTools_HintSpan_Hidden
{
	display:  none;
}
.gwtTaskTools_ViewMenuAnchor
{
	cursor: pointer;
}
.gwtTaskTools_ViewMenuDIV
{
	position: absolute;
	right: 5px;
	top: 3px;
}
.gwtTaskTools_ViewMenuSpan
{
	color: #333333;
	font-size: 0.75em;
	padding: 5px;
}
.gwtTaskToolsButton_WidgetAnchor
{
	background: none !important;
}
a.gwtTaskToolsButton_WidgetAnchor:hover
{
	background: none !important;
}
/* ... */

